--- a/war/views/index.html
+++ b/war/views/index.html
@@ -1,55 +1,59 @@
 <div class="span9">
-          <div class="hero-unit">
-            <h1>Welcome</h1>
-            <p>We provide an open forum for discussion for members of LUU and the Leeds Community, promoting critical thinking, open discussion, free speech and uncensored debate. 
-            Training is available and opportunities for debating and public speaking. LDU have a national and international reputation for excellence. </p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-          </div>
-          
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Our Reputation</h2>
-              <p>Our members have travelled across the world from europe to south-east asia to deliever debating training and to take part in internation competitions.
-               We have a history of success at many national and international competitions with our best speakers reaching finals and semi-finals of large prestigous competitions.</p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Our Training</h2>
-              <p>Debating, as a discipline, gives you skills that your degree demands yet cannot focus on. 
-              Our members are taught to argument construction, deconstruction, structure and analysis. 
-              Without expection, our members have improved their seminar contributions and essay marks due to our training.</p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Our Meetings</h2>
-              <p>We meet every thursday and tuesday, where we train members in workshops and seminars then run a debate. 
-              Debates are judged by our senior members with years of professional training and speaking experience. 
-              </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            
-          </div>
-          
-          <div class="row-fluid">
-          <div class="span4">
-              <h2>How</h2>
-              <p>Debating asks our members to engage with the varied facets public speaking: clarity of expression, phonology, tempo, rhetoric and argumentation. 
-              Skills our members find invaluable in later life. 
-              We teach diverse topics from the ethics of euthanasia to humanitarian intervention, emphasising the presentation of meaningful content in an engaging way.</p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>Why</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-              <h2>What</h2>
-              <p>
-              We hold internal and public debates, invite speakers and campaign to protect our right to freedom of expression on campus.
-              Our schools and community program send speakers across Leeds and Yorkshire promote debate and public speaking outside the Universities.  
-              </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>            
-          </div>
-        </div>
+  <div class="hero-unit">
+    <h1>Welcome</h1>
+    <p>We provide an open forum for discussion for members of LUU and the Leeds Community, promoting critical thinking, open discussion, free speech and uncensored debate. 
+    Training is available and opportunities for debating and public speaking. LDU have a national and international reputation for excellence. </p>
+    <p><a class="btn btn-primary btn-large" href="#about">Learn more &raquo;</a></p>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span4 info">
+      <h2>On Campus</h2>
+      <p>LDU members are offered the chance to become part of a prominent student We work with students and the Leeds University Union and the Leeds Metropolitan 
+      Student&apos;s Union in order to promote and facilitate free speech on campus . We host and take part in a wide range of activities within the university designed
+       at fostering critical thought and discussion in the university. </p>
+    </div>
+    <div class="span4 info">
+      <h2>Off Campus</h2>
+      <p>LDU members travel the country, representing the society and promoting free speech nationwide. 
+      Our speakers compete nationally and are often invited to other institutions to take part in public debates or chair internal competitions.
+       We have a strong national reputation - with many of our members reaching the finals and semi finals of large national competition. 
+       See the <a href="#news">Achievements</a> sections for a more detailed overview of our national success. </p>
+    </div>
+    <div class="span4 info">
+      <h2>Internationally</h2>
+      <p>We send speakers around the world to represent the University in the European Championships and World Championships. 
+      Locations have ranged from Galway, Ireland, to Manilla, The Philippines. We aid our members financially and provide them with 
+      the oratorical and analytical skill they&apos;ll need in order to take on the world&apos;s best. The trips are always the highlight of 
+      the year and are a fantastic opportunity to see the world and gain a truly unique experience. </p>
+    </div>
+    
+  </div>
+  
+  <div class="row-fluid">
+  	<div class="span4 info">
+      <h2>Our Community</h2>
+      <p>We meet every Thursday and Tuesday, where we train members in workshops and seminars then run a debate. 
+		Our members are offered training in argumentation, rhetoric and a broad range of critical subjects 
+       - they are taught not just how to give an effective argument, but also how to judge one. We debate competitively internally and externally throughout the year
+		and host regular social events for LDU members. Many of our members have written for the Guardian, the Independent, New Statesman and Leeds Student .
+      </p>
+    </div>
+    <div class="span4 info">
+      <h2>Local Community</h2>
+      <p>Our debaters are actively engaged with local affairs and the community around Leeds. 
+      We work with local figures and groups in order to foster discussion and build a strong local voice. 
+      We are also heavily involved in local schools; our members have the opportunity to volunteer in local schools 
+      around Leeds, coaching young students in the art and virtues of debate. We give mentors the training they&apos;ll 
+      need in order to make a difference and also advise schools on how they can utilise debate in their classrooms. </p>
+    </div>
+    <div class="span4 info">
+      <h2>Wider Community</h2>
+      <p>
+      In 2012 the LDU established a link with &apos;Springboard4Cambodia&apos;. The Cambodian based charity worked with 3 LDU members in order to promote speech 
+      and debate within Cambodian schools. Our members were flown out to Phnom Penh and funded to aid in project aimed at raising aspiration in the country. 
+      We hope to continue to be able to offer this opportunity to future LDU members. 
+      </p>
+    </div>            
+  </div>
+</div>
