Refactored view hierachy and dispatch mechanism. Added several views. Requests now delay a little to consistetly show a brief waiting gif.

--- a/war/views/info/committee.html
+++ b/war/views/info/committee.html
@@ -18,7 +18,9 @@
             <img src="/assets/img/committee/ruby.jpg" alt="Ruby">
             <div class="caption">
               <h5>Ruby Lott-LaVigna (Vice President)</h5>
-              <p style="height: 110px">Ruby is a 2nd Year BA English Student.</p>
+              <p style="height: 110px">Ruby likes long walks on the beach and the sound of rain on the window pane. 
+              She studies BA English literature and has been debating since she started university, regretting it ever since. 
+              </p>
               <p>vicepresident@leedsdebatingunion.com</p>
             </div>
           </div>
@@ -28,7 +30,8 @@
             <img src="/assets/img/committee/mat.jpg" alt="">
             <div class="caption">
               <h5>Matthew Manning (Treasurer)</h5>
-              <p style="height: 110px">Matthew is a 3rd Year BSc Student.</p>
+              <p style="height: 110px">Matt is a 3rd year MEng Mechanical Engineering Student. 
+              He has been a keen member of LDU for the past two years and has competed in many competitions across the UK.</p>
 				<p>treasurer@leedsdebatingunion.com</p>
             </div>
           </div>
@@ -38,7 +41,8 @@
             <img src="/assets/img/committee/sophie.jpg" alt="">
             <div class="caption">
               <h5>Sophie Collins (Director of Membership)</h5>
-              <p style="height: 110px">Sophie is a 2nd Year BA English and Philosophy student.</p>
+              <p style="height: 110px">Sophie is a second year BA English and Philosophy student. 
+              She started debating in her first term of university and has been involved ever since she likes long walks in the park, red wine and being cheeky.</p>
 				<p>membership@leedsdebatingunion.com</p>
             </div>
           </div>
@@ -48,7 +52,8 @@
             <img src="/assets/img/committee/hilary.jpg" alt="">
             <div class="caption">
               <h5>Hilary Tan (Director of Public Speaking)</h5>
-              <p style="height: 110px">Hilary is a 3rd Year BA student.</p>
+              <p style="height: 110px">Hilary is a 3rd Year student with no history or place in the universe, her negligence and lethargy combine 
+              destructively to leave her without a biography - or story of any kind.</p>
 				<p>events@leedsdebatingunion.com</p>
             </div>
           </div>
@@ -58,7 +63,8 @@
             <img src="/assets/img/committee/chris.jpg" alt="">
             <div class="caption">
               <h5>Chris Jaffray (Director of Publicity)</h5>              
-              <p style="height: 110px">Chris is a 3rd Year BA student.</p>
+              <p style="height: 110px">Chris is a third year BA English Language and Literature Student. 
+              He has debated at school and in Leeds Debating Union for two years.</p>
 				<p>publicity@leedsdebatingunion.com</p>            </div>
           </div>
         </li>
