--- a/war/views/sidebar.html
+++ b/war/views/sidebar.html
@@ -3,23 +3,25 @@
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
       <li class="nav-header">Information</li>
-      <li><a href="#committee">The Committee</a></li>
-      <li><a href="#openiv">Leeds Open (IV)</a></li>
-      <li><a href="#ync">Yorkshire Novice Cup</a></li>
-      <li><a href="#events">Events Calendar</a></li>
-      <li><a href="#news">News and Achievements</a></li>
-      <li><a href="#community">Schools and Community</a></li>
+      <li><a href="#info.committee">The Committee</a></li>
+      <li><a href="#info.events">Events Calendar</a></li>
+      <li><a href="#info.news">News and Achievements</a></li>
+      <li><a href="#info.community">Schools and Community</a></li>
       <li class="nav-header">Next Steps</li>
-      <li><a href="#join">Join LDU</a></li>
-      <li><a href="#contact">Contact Us</a></li>
+      <li><a href="#info.join">Join LDU</a></li>
+      <li><a href="#info.contact">Contact Us</a></li>
+      <li class="nav-header">For Friends</li>
+      <li><a href="#friends.openiv">Leeds Open (IV)</a></li>
+      <li><a href="#friends.ync">Yorkshire Novice Cup</a></li>
+      <li><a href="#school.sghs">Skipton Girls</a></li>
       <li class="nav-header">For Members</li>
-      <li><a href="#socials">Socials</a></li>
-      <li><a href="#training">Training</a></li>
-      <li><a href="#resources">Resources</a></li>
-      <li><a href="#fundingreq">Funding Request</a></li>
-      <li><a href="#rank">Selection Ranking</a></li>
-      <li><a href="#competition">Competition Registration</a></li>
-      <li><a href="#feedback">Suggestions and Feedback</a></li>
+      <li><a href="#members.socials">Socials</a></li>
+      <li><a href="#members.resources">Training & Resources</a></li>
+      <li><a href="#members.eudc">Euros (EUDC)</a></li>
+      <li><a href="#members.fundingreq">Funding Request</a></li>
+      <li><a href="#members.rank">Selection Ranking</a></li>
+      <li><a href="#members.competition">Competition Registration</a></li>
+      <li><a href="#members.feedback">Suggestions and Feedback</a></li>
     </ul>
   </div>
   <div style="padding:1em">
