--- a/war/views/school/sghs.html
+++ b/war/views/school/sghs.html
@@ -1,6 +1,6 @@
 <div class="span9">
 	<div class="page-header">
-		<h1>Training</h1>
+		<h1>Skipton Girls High School</h1>
 	</div>
 	<p>Content will appear here soon.</p>
 </div>
